Updating reflection, changing deprecated newInstance to getDeclaredConstructor().newInstance() in test runner.